--- a/src/RadFramework.Abstractions.Extensibility/RadFramework.Abstractions.Extensibility.csproj
+++ b/src/RadFramework.Abstractions.Extensibility/RadFramework.Abstractions.Extensibility.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>13</LangVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
 </Project>
