--- a/src/RadFramework.Libraries.Extensibility.Tests/RadFramework.Libraries.Extensibility.Tests.csproj
+++ b/src/RadFramework.Libraries.Extensibility.Tests/RadFramework.Libraries.Extensibility.Tests.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
 
         <RootNamespace>RadFramework.Extensibility.Tests</RootNamespace>
+
+        <LangVersion>13</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
